--- a/blog-parent/pom.xml
+++ b/blog-parent/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>xyz.fwblog</groupId>
-	<artifactId>fwblog-parent</artifactId>
+	<artifactId>blog-parent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<!-- 集中定义依赖版本号 -->
