The display function of article detail page is complete.

--- a/blog-portal/pom.xml
+++ b/blog-portal/pom.xml
@@ -11,11 +11,11 @@
   <packaging>war</packaging>
   
   <dependencies>
-<!-- 		<dependency> -->
-<!-- 			<groupId>xyz.fwblog</groupId> -->
-<!-- 			<artifactId>blog-manager-pojo</artifactId> -->
-<!-- 			<version>0.0.1-SNAPSHOT</version> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>xyz.fwblog</groupId>
+			<artifactId>blog-manager-pojo</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
