--- a/blog-portal/src/main/resources/properties/resource.properties
+++ b/blog-portal/src/main/resources/properties/resource.properties
@@ -2,3 +2,9 @@
 REST_BASE_URL = http://localhost:8081/rest
 REST_CONTENT_URL = /content
 REST_CONTENT_AD1_CID = /89
+
+REST_ARTICLE_BASE_URL = /article/
+REST_USER_BASE_URL = /user/
+
+# search\u670D\u52A1\u57FA\u5730\u5740
+SEARCH_SERVER_BASE_URL = http://localhost:8083/search/query
