the display function of user page is complete.

--- a/blog-portal/src/main/resources/properties/resource.properties
+++ b/blog-portal/src/main/resources/properties/resource.properties
@@ -1,9 +1,13 @@
-# rest\u670D\u52A1\u5668\u5730\u5740\u914D\u7F6E
+# REST\u670D\u52A1\u5668\u5730\u5740\u914D\u7F6E
 REST_BASE_URL = http://localhost:8081/rest
 REST_CONTENT_URL = /content
 REST_CONTENT_AD1_CID = /89
 
+# REST\u670D\u52A1\u6587\u7AE0\u529F\u80FDURL
 REST_ARTICLE_BASE_URL = /article/
+REST_USERPAGE_BASE_URL = /article/userpage/
+
+# REST\u670D\u52A1\u7528\u6237\u529F\u80FDURL
 REST_USER_BASE_URL = /user/
 
 # search\u670D\u52A1\u57FA\u5730\u5740
