the login/register/login-intercept function of portal system is complete

--- a/blog-portal/src/main/resources/properties/resource.properties
+++ b/blog-portal/src/main/resources/properties/resource.properties
@@ -12,3 +12,15 @@ REST_USER_BASE_URL = /user/
 
 # search\u670D\u52A1\u57FA\u5730\u5740
 SEARCH_SERVER_BASE_URL = http://localhost:8083/search/query
+
+# SSO\u670D\u52A1\u57FA\u5730\u5740
+SSO_BASE_URL = http://localhost:8084
+
+# SSO \u767B\u9646URL, \u57DF\u540D\u52A0/... \u56E0\u6B64\u7ED9\u5B8C\u6574\u7684\uFF0C\u524D\u9762\u7684SSO_BASE_URL\u662F\u5C40\u57DF\u7F51\u5185\u8BBF\u95EE\uFF0C\u5199\u7684IP
+SSO_LOGIN_URL = http://localhost:8084/account/login
+
+# SSO\u901A\u8FC7token\u67E5\u8BE2session\u4E2D\u7684User\u4FE1\u606F\u7684URL
+SSO_SESSION_SERVICE_URL = /user/token/
+
+# SSO Cookie name
+SSO_COOKIE_NAME = FWBLOG_COOKIE
